--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'androidx.fragment:fragment-ktx:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
+
+
 }
