--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.App.Starting">
         <activity
             android:name=".ui.HomeActivity"
-            android:theme="@style/Theme.App.Starting"
+            android:theme="@style/Theme.NutritionsApp"
             />
         <activity
             android:name=".ui.CalculateActivity"
