--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App.Starting">
+        android:theme="@style/splashScreenTheme">
         <activity
             android:name=".ui.HomeActivity"
-            android:theme="@style/Theme.NutritionsApp"
-            />
+            android:theme="@style/Theme.NutritionsApp" />
         <activity
             android:name=".ui.CalculateActivity"
             android:exported="true">
