--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.nutritionsapp">
+    package="com.example.nutritionApp">
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,7 @@
         android:theme="@style/splashScreenTheme">
         <activity
             android:name=".ui.HomeActivity"
-            android:theme="@style/Theme.NutritionsApp" />
+            android:theme="@style/Theme.NutritionApp" />
         <activity
             android:name=".ui.CalculateActivity"
             android:exported="true">
